# RayNu

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  hda.html  index.html  kani-version.toml  paper.html  rust-toolchain.toml  verus-version.toml  wrangler.jsonc
.cargo/: config.toml
arch/: apic.rs  arch_test.rs  cpu.rs  mod.rs
assets/: bzImage  bzImage.proto  initrd  webui.html
audit/: integrity.rs  integrity_proof.rs  integrity_spec.rs  integrity_test.rs  m5_audit_gate.rs  m5_audit_gate_test.rs  m5_report_gate.rs  m5_report_gate_test.rs  m6_pdf_gate.rs  m6_pdf_gate_test.rs  mod.rs  report.rs  report_test.rs
boot/: assets_gate.rs  assets_gate_test.rs  boot_test.rs  esp_assets.rs  handoff.rs  mem.rs  mem_test.rs  mod.rs  pe_assets.rs  pe_assets_test.rs  serial.rs
devices/: devices_test.rs  lapic_virt.rs  lapic_virt_test.rs  m4_blk_gate.rs  m4_blk_gate_test.rs  m4_net_gate.rs  m4_net_gate_test.rs  mod.rs  serial_pio.rs  serial_pio_test.rs  virtio_blk.rs  virtio_blk_test.rs  virtio_net.rs  virtio_net_test.rs
docs/: architecture.md  hda-cursor-prompt.md  hda.md  m3_plan.md  m3_post_shell_plan.md  m4_plan.md  m5_plan.md  m6_plan.md  m7_plan.md  progress.md  risk_register.md
ept_model/: Cargo.toml
ept_model/src/: lib.rs
guest/: linux_boot.rs  linux_boot_test.rs  mod.rs
idrac/: idrac_test.rs  m5_idrac_gate.rs  m5_idrac_gate_test.rs  mod.rs
memory/: boot_alloc.rs  ept.rs  ept3_gate.rs  ept3_gate_test.rs  ept_hw.rs  ept_proof.rs  ept_spec.rs  ept_test.rs  frame_allocator.rs  frame_allocator_proof.rs  frame_allocator_spec.rs  frame_allocator_test.rs  kani_gate.rs  kani_gate_test.rs  l2_gate.rs  l2_gate_test.rs  l3_gate.rs  l3_gate_test.rs  l3_link_gate.rs  l3_link_gate_test.rs  l3_refine_gate.rs  l3_refine_gate_test.rs  l3_verify_gate.rs  l3_verify_gate_test.rs  m4_2vm_gate.rs  m4_2vm_gate_test.rs  m4_lpage_gate.rs  m4_lpage_gate_test.rs  m4_nguest_refine_gate.rs  m4_nguest_refine_gate_test.rs  m4_nguest_spec_gate.rs  m4_nguest_spec_gate_test.rs  m4_nguest_verify_gate.rs  m4_nguest_verify_gate_test.rs  m5_alloc_refine_gate.rs  m5_alloc_refine_gate_test.rs  m5_lpage_verify_gate.rs  m5_lpage_verify_gate_test.rs  m5_numa_gate.rs  m5_numa_gate_test.rs  (+13 more)
mgmt/: api.rs  api_test.rs  datastore.rs  datastore_test.rs  ext.rs  ext_test.rs  fault.rs  fault_test.rs  ha.rs  ha_test.rs  http.rs  http_listen.rs  http_listen_test.rs  http_test.rs  iso.rs  iso_test.rs  m5_api_gate.rs  m5_api_gate_test.rs  m5_life_gate.rs  m5_life_gate_test.rs  m5_webui_gate.rs  m5_webui_gate_test.rs  m6_auth_gate.rs  m6_auth_gate_test.rs  m6_ext_gate.rs  m6_ext_gate_test.rs  m6_fault_gate.rs  m6_fault_gate_test.rs  m6_ha_gate.rs  (+23 more)
(+156 files in other folders)
