[package]
name = "r640-hypervisor"
version = "0.1.0"
edition = "2021"
description = "RayNu-V — formally verified bare-metal hypervisor (Dell R640-first)"
license = "BUSL-1.1"
publish = false
default-run = "r640-hypervisor"

# Host-only Verus model crate (`ept_model`) is a workspace member but not a
# dependency of the UEFI binary. `default-members` keeps `cargo test` on root.
[workspace]
members = [".", "ept_model"]
default-members = ["."]
resolver = "2"

[lib]
name = "r640_hypervisor"
path = "src/lib.rs"

[[bin]]
name = "r640-hypervisor"
path = "src/main.rs"
required-features = ["uefi-bin"]

[features]
# Host `cargo test` uses default features (no UEFI).
# Firmware build: --features uefi-bin --target x86_64-unknown-uefi
default = []
uefi-bin = ["dep:uefi"]

[dependencies]
uefi = { version = "0.33", optional = true, features = ["panic_handler", "logger", "alloc", "global_allocator"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = "symbols"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
